--- a/DBMS_NOTE/DBMS_Indexing.html
+++ b/DBMS_NOTE/DBMS_Indexing.html
@@ -217,38 +217,37 @@
         </div>
 
         <h4>B) Secondary Indexing</h4>
-       <div class="example">
-    <strong>Definition:</strong> 
-    Secondary Indexing is an additional index created on non-primary attributes (other than the primary key). 
-    It allows faster searching on columns like <em>Name</em> or <em>City</em>, even if they are not sorted. 
-    It is also known as <strong>Non-Clustered Indexing</strong>.
-    <ul>
-        <li>Primary index → built only on the primary key (unique, one per table).</li>
-        <li>Secondary index → built on other columns (can be unique or non-unique).</li>
-        <li>Helps in searching efficiently without scanning the whole table.</li>
-    </ul>
-</div>
+        <div class="example">
+            <strong>Definition:</strong>
+            Secondary Indexing is an additional index created on non-primary attributes (other than the primary key).
+            It allows faster searching on columns like <em>Name</em> or <em>City</em>, even if they are not sorted.
+            It is also known as <strong>Non-Clustered Indexing</strong>.
+            <ul>
+                <li>Primary index → built only on the primary key (unique, one per table).</li>
+                <li>Secondary index → built on other columns (can be unique or non-unique).</li>
+                <li>Helps in searching efficiently without scanning the whole table.</li>
+            </ul>
+        </div>
 
 
 
-<div class="structure-visual">
-    <h4>Secondary Index Structure</h4>
-    <img src="https://scaler.com/topics/images/secondary-indexing.webp" 
-         alt="Secondary Index Structure"
-         style="width: 800px; height: auto; margin: 20px 0;">
-</div>
+        <div class="structure-visual">
+            <h4>Secondary Index Structure</h4>
+            <img src="https://scaler.com/topics/images/secondary-indexing.webp" alt="Secondary Index Structure"
+                style="width: 800px; height: auto; margin: 20px 0;">
+        </div>
 
-<div class="characteristics">
-    <strong>Characteristics of Secondary Indexing:</strong>
-    <ul>
-        <li>Can be created on <strong>any column</strong> (not just the primary key).</li>
-        <li>Search Keys may be unique (e.g., Email) or non-unique (e.g., City).</li>
-        <li>Index entries are sorted, but the actual data is not necessarily sorted.</li>
-        <li>Multiple secondary indexes can exist in one table.</li>
-        <li>Requires <strong>extra storage</strong> and update overhead.</li>
-        <li>Faster than a full table scan but slower than primary indexing.</li>
-    </ul>
-</div>
+        <div class="characteristics">
+            <strong>Characteristics of Secondary Indexing:</strong>
+            <ul>
+                <li>Can be created on <strong>any column</strong> (not just the primary key).</li>
+                <li>Search Keys may be unique (e.g., Email) or non-unique (e.g., City).</li>
+                <li>Index entries are sorted, but the actual data is not necessarily sorted.</li>
+                <li>Multiple secondary indexes can exist in one table.</li>
+                <li>Requires <strong>extra storage</strong> and update overhead.</li>
+                <li>Faster than a full table scan but slower than primary indexing.</li>
+            </ul>
+        </div>
 
 
 
