--- a/DBMS_NOTE/introduction_to_dbms.html
+++ b/DBMS_NOTE/introduction_to_dbms.html
@@ -323,27 +323,29 @@
             </ul>
         </div>
         <img src="https://www.includehelp.com/dbms/Images/database-languages.jpg" alt="dbms">
-        <pre class="code-example">
+       <pre class="code-example">
 -- Database Languages Example
--- DDL (Data Definition Language)
+
+-- DDL (Data Definition Language) → Used to define and manage database structure/schema.
 CREATE TABLE Students (
     id INT PRIMARY KEY,
     name VARCHAR(50),
     email VARCHAR(100)
 );
 
--- DML (Data Manipulation Language)
+-- DML (Data Manipulation Language) → Used to insert, update, delete, and retrieve data.
 INSERT INTO Students VALUES (1, 'John Doe', 'john@email.com');
 SELECT * FROM Students WHERE id = 1;
 
--- DCL (Data Control Language)
+-- DCL (Data Control Language) → Used to control access and permissions in the database.
 GRANT SELECT ON Students TO user1;
 
--- TCL (Transaction Control Language)
+-- TCL (Transaction Control Language) → Used to manage transactions to ensure data consistency.
 BEGIN TRANSACTION;
 UPDATE Students SET name = 'Jane Doe' WHERE id = 1;
 COMMIT;
-        </pre>
+</pre>
+
 
         <h2>5. Users of DBMS</h2>
 
