--- a/OS_NOTE/Process_Synchronization.html
+++ b/OS_NOTE/Process_Synchronization.html
@@ -197,7 +197,7 @@
 
             <div class="diagram-container">
                 <h3>Critical Section Visualization</h3>
-                <img src="http://www.studytonight.com/operating-system/images/critical-section-problem.png" alt="Critical Section Diagram" style="max-width: 100%; height: auto;">
+                <img src="https://files.codingninjas.in/article_images/critical-section-3-1643133014.webp" alt="Critical Section Diagram" style="max-width: 100%; height: auto;">
             </div>
 
             
@@ -291,7 +291,7 @@ release(lock);
             <div class="warning">
                 <strong>Mutex Problems:</strong>
                 <ul>
-                    <li><strong>Busy Waiting:</strong> Process wastes CPU cycles</li>
+<li><strong>Busy Waiting:</strong> A process continuously checks for a condition in a loop without releasing the CPU, wasting CPU cycles instead of performing useful work.</li>
                     <li><strong>Deadlock:</strong> Processes wait for each other</li>
                     <li><strong>Starvation:</strong> High priority threads blocked</li>
                 </ul>
