--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <li><a href="java/Java_Architecture.html">Java Architecture</a></li>
       <li><a href="java/Adavanced_Java.html">Advanced Java</a></li>
       <li><a href="java/Collections_FrameWork.html">Collections Framework</a></li>
+      <li><a href="java/importantTopic.html">important Topic</a></li>
     </ul>
   </div>
 
@@ -170,6 +171,7 @@
       <li><a href="react/QSet1.html">Questions set 1</a></li>
       <li><a href="react/Qset2.html"> Questions set 2</a></li>
       <li><a href="react/Qset3.html">Questions set 3</a></li>
+      <li><a href="react/BackEnd.html">BackEnd</a></li>
     </ul>
   </div>
 
